# MarkItDown-Handy

./: CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: build_both_apps.sh  build_conda_wrapper_app.sh  build_cross_platform_portable.py  build_portable_embedded_app.sh  build_windows_portable.ps1  diagnose_portable_app.sh  run_from_source.sh  setup_dev_env.sh
src/: markitdown_handy.py
